--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cliente",
-  
+  "homepage": "http://anamorales13.github.io/cliente",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
