--- a/package.json
+++ b/package.json
@@ -27,14 +27,17 @@
     "react-bootstrap-dropdown": "^0.3.0",
     "react-dom": "^17.0.1",
     "react-emoji": "^0.5.0",
+    "react-icons": "^4.1.0",
     "react-modal": "^3.12.1",
     "react-moment": "^1.0.0",
     "react-paginate": "^6.5.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-scroll-to-bottom": "^4.0.0",
     "react-simple-dropdown": "^3.2.3",
     "simple-react-validator": "^1.6.0",
     "socket.io-client": "^3.0.3",
+    "styled-components": "^5.2.1",
     "sweetalert": "^2.1.2",
     "web-vitals": "^0.2.4"
   },
