--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.0",
     "bcrypt-nodejs": "0.0.3",
     "bootstrap": "^4.5.3",
+    "cloudinary-react": "^1.6.8",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express-session": "^1.17.1",
